--- a/central_clinic.html
+++ b/central_clinic.html
@@ -1,7 +1,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">    
   <head>      
     <title>Logy.AI | Central Clinic </title>      
-    <meta http-equiv="refresh" content="0;URL='https://api.whatsapp.com/send/?phone=971501223879&text=Hi Breeze Medical Centre'" />    
+    <meta http-equiv="refresh" content="0;URL='https://api.whatsapp.com/send/?phone=971501223879&text=Hi Central Clinics'" />    
   </head>    
   <body> 
     <p></p> 
