--- a/kellogs.html
+++ b/kellogs.html
@@ -1,6 +1,6 @@
 <html xmlns="http://www.w3.org/1999/xhtml">    
   <head>      
-    <title>Logy.AI | VLCC </title>      
+    <title>Logy.AI | Kellogs</title>      
     <meta http-equiv="refresh" content="0;URL='https://api.whatsapp.com/send/?phone=%2B14158779129&text=Hi'" />    
   </head>    
   <body> 
